--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@linaoliveira/design-system": "^1.1.03",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
